--- a/usermanagemnt/src/DisplayRecords.css
+++ b/usermanagemnt/src/DisplayRecords.css
@@ -1,20 +1,55 @@
 .flex-container {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
-    background-color: DodgerBlue;
+    background-color: rgb(4, 196, 164);
+    padding: 30px;
   }
   
   .flex-container > div {
-    background-color: #f1f1f1;
+    background-color:rgb(174, 255, 241);
     width: 300px;
-    height:400px;
-    border-radius: 5px;
+    height:300px;
+    border-radius: 10px;
     margin: 10px;
     text-align: center;
-    line-height: 75px;
-    font-size: 30px;
-  }.flex-container {
+    line-height: 28px;
+    font-size: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:black;
+  }
+  /* .flex-container {
   display: flex;
   flex-wrap: wrap;
-  background-color: DodgerBlue;
+  background-color: black;
+} */
+.LoadMore {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 5px;
+}
+.button2 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #f44336;
+  margin-top: 50%;
+ 
+}
+
+.button2:hover {
+  background-color: #f44336;
+  color: rgb(236, 155, 155);
+}
+img{
+  margin-top: 15px;
+  border-radius: 8px;
 }
